# test-results-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/routes/: projects.py
backend/app/core/: settings.py
backend/app/services/: storage.py
backend/tests/: conftest.py  test_projects_api.py  test_storage_service.py
cli/: pyproject.toml
cli/test_results_cli/: cli.py
examples/: README.md  locustfile.py  simple_openapi.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ProjectList.css  ProjectList.tsx  ProjectTable.tsx  ReportFrame.css  ReportFrame.tsx  SummaryGrid.css  SummaryGrid.tsx
frontend/src/styles/: home.css  layout.css  main.css  table.css
openapi_locustgen/: __init__.py  cli.py  http_adapters.py  models.py  utils.py
openapi_locustgen/codegen/: __init__.py  client_codegen.py  locust_codegen.py
tests/: conftest.py  test_cli.py  test_client_codegen.py  test_http_adapters.py  test_locust_codegen.py  test_smoke.py  test_utils.py
tests/data/: simple_openapi.yaml
