[project]
name = "test-results-uploader"
version = "0.1.0"
description = "CLI for uploading test results to the Test Results Dashboard API."
authors = [{ name = "Test Results Dashboard" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<0.13",
    "httpx>=0.27,<0.28",
]

[project.scripts]
trd-upload = "test_results_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
